--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="middle-blocks2">
                 <div class="personal">
                     <h2>
-                        Your <font class="red-title">Title here</font>
+                        Your <span class="red-title">Title here</span>
                     </h2>
                     <div class="photo-box">
 
@@ -129,7 +129,7 @@
                 </div>
                 <div class="personal">
                     <h2>
-                        Your <font class="red-title">Title here</font>
+                        Your <span class="red-title">Title here</span>
                     </h2>
                     <div class="photo-box">
 
@@ -137,14 +137,14 @@
                 </div>
                 <div class="personal3">
                     <h2>
-                        Your <font class="red-title">Title here</font>
+                        Your <span class="red-title">Title here</span>
                     </h2>
                     <div class="photo-box3">
                     </div>
                 </div>
                 <div id="box4" class="personal">
                     <h2>
-                        Your <font class="red-title">Title here</font>
+                        Your <span class="red-title">Title here</span>
                     </h2>
                     <div class="photo-box4">
 
@@ -175,7 +175,7 @@
                             dui.
                         </p>
                     </div>
-                    <font><a href="#" class="forlink"> Read More</a></font>
+                    <p class="forText"><a href="#" class="forlink"> Read More</a></p>
 
                 </div>
                 <div class="toolbars">
@@ -196,7 +196,7 @@
                             dui.
                         </p>
                     </div>
-                    <font><a href="#" class="forlink"> Read More</a></font>
+                    <p class="forText"><a href="#" class="forlink"> Read More</a></p>
                 </div>
                 <div class="toolbars">
                     <h3>
@@ -216,7 +216,7 @@
                             dui.
                         </p>
                     </div>
-                    <font><a href="#" class="forlink"> Read More</a></font>
+                    <p class="forText"><a href="#" class="forlink"> Read More</a></p>
                 </div>
                 <div class="toolbars">
                     <h3>
@@ -236,7 +236,7 @@
                             dui.
                         </p>
                     </div>
-                    <font><a href="#" class="forlink"> Read More</a></font>
+                    <p class="forText"><a href="#" class="forlink"> Read More</a></p>
                 </div>
             </div>
         </footer>
